# DSBSu

./: CMakeLists.txt  README  README.adoc  README.md  defs.h.in  dsbsu-helper  dsbsu.desktop  dsbsu.pro  dsbsudo  dsbsudo-askpass  dsbsudo.in  readme.mdoc
lib/: libdsbsu.c  libdsbsu.h
locale/: dsbsu_de.ts  dsbsu_fr.ts
man/: dsbsu.1  dsbsudo.1
src/: main.cpp  mainwin.cpp  mainwin.h
